--- a/Presentation/css/CRAWLAB.css
+++ b/Presentation/css/CRAWLAB.css
@@ -31,10 +31,10 @@ body {
   color: #222; 
 
   /* Add Fluer di Lis to the top right */
-  background-image: url('gt-logo-colors4.png');
-  background-size: 10%;
+  /* background-image: url('gt-logo-colors4.png'); */
+  /* background-size: 10%;
   background-position: 99% 1%;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 
     /* Add Fluer di Lis to the top right */
     /* background-image: url('chevron.png');
